--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,18 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
+.dancefloor {
+  background-image:url("dancefloor.jpg");
+  background-repeat:no-repeat;
+  background-size:cover;
+  height: 100%;
+  width: 100%;
+}
 .title, .addDancerButton{
+  padding:5px 12px;
+  float:right;
+}
+.lineUpButton {
   padding:5px 12px;
   float:right;
 }
@@ -23,5 +34,13 @@ body, a:link, a:visited, a:active{
 .dancer{
   border:10px solid red;
   border-radius:10px;
+  position:absolute;
+}
+.square{
+  border:10px solid blue;
+  position:absolute;
+}
+.rotater{
+  border:10px solid green;
   position:absolute;
 }
